# codexSessionManager

./: .gitignore  Cargo.toml  README.md  set-version.ps1  使用说明.md
.github/workflows/: release.yml
src/: app_server.rs  backup.rs  backup_store.rs  cli.rs  compact.rs  db_repair.rs  favorites.rs  instance_registry.rs  instance_sync.rs  lib.rs  main.rs  migrate.rs  path_map.rs  profile.rs  restore.rs  rollout.rs  safety.rs  scan.rs  session_index.rs  session_list.rs  session_ops.rs  settings.rs  state_db.rs  trash.rs  validate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: app_server_tests.rs  backup_store_tests.rs  cli_tests.rs  compact_tests.rs  db_repair_tests.rs  favorites_tests.rs  instance_registry_tests.rs  instance_sync_tests.rs  migrate_provider_tests.rs  path_map_tests.rs  profile_tests.rs  restore_tests.rs  rollout_tests.rs  safety_tests.rs  session_edit_tests.rs  session_index_tests.rs  session_list_tests.rs  session_ops_tests.rs  set-version.tests.ps1  settings_tests.rs  state_db_tests.rs  tauri-config.tests.ps1  trash_tests.rs
ui/: index.html  package-lock.json  package.json  tsconfig.instance-test.json  tsconfig.path-picker-test.json
ui/src/: codexExitConfirm.test.ts  codexExitConfirm.ts  compactFailureDialog.test.ts  compactFailureDialog.ts  inputCache.test.ts  inputCache.ts  instanceManagement.test.ts  instanceManagement.ts  instanceSyncPreview.ts  main.ts  pathPicker.test.ts  pathPicker.ts  projectExpansionCache.test.ts  projectExpansionCache.ts  sessionDisplay.test.ts  sessionDisplay.ts  sessionGroups.test.ts  sessionGroups.ts  styles.css  taskProgressView.test.ts  taskProgressView.ts  updatePrompt.test.ts  updatePrompt.ts
