[package]
name = "codex-session-manager"
version = "0.5.0"
edition = "2021"
description = "Safe scanner and migrator for OpenAI Codex session metadata."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
toml_edit = "0.22"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

