[package]
name = "codex-session-manager-desktop"
version = "0.3.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
codex-session-manager = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

